--- a/gdal2hdf/Dockerfile
+++ b/gdal2hdf/Dockerfile
@@ -52,5 +52,7 @@ RUN \
 	make && make install && cd .. && \
 	rm -rf gdal-$GDAL_VERSION*
 
-COPY gdal2hdf/lambda-package.sh /usr/local/bin/lambda-package.sh
+COPY \
+	gdal2hdf/lambda-package.sh /usr/local/bin/lambda-package.sh \
+    gdal2hdf/lambda-excluded-packages /usr/local/etc/lambda-excluded-packages
 
