--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -6,4 +6,5 @@ RUN \
 	yum -y update; \
 	yum install -y python27-devel python27-pip; \
 	pip install --upgrade pip; \
-	pip install boto3 nose;
+	pip install boto3 nose; \
+    yum clean all;
