--- a/geolambda-seed/docker-compose.yml
+++ b/geolambda-seed/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   base:
     build:
       context: .
-    image: 'astrodigital/ad-ndvi:0.1.0'
+    image: 'myimage:version'
     entrypoint: /bin/bash
     env_file:
       - .env
@@ -13,7 +13,7 @@ services:
       - '.:/work'
 
   test:
-    image: 'astrodigital/ad-ndvi:0.1.0'
+    image: 'myimage:version'
     entrypoint: bash -c 'nosetests -v -s;'
     working_dir: /work
     env_file:
@@ -22,7 +22,7 @@ services:
       - '.:/work'
 
   package:
-    image: 'astrodigital/ad-ndvi:0.1.0'
+    image: 'myimage:version'
     command: lambda-package.sh
     working_dir: /work
     volumes:
