--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -4,7 +4,12 @@ FROM lambdalinux/baseimage-amzn:2016.09-000
 
 RUN \
 	yum -y update; \
+    # python 3.5
+    yum install -y python35-devel python35-pip; \
+    pip-3.5 install --upgrade pip; \
+    pip3 install boto3 nose; \
+	# python 2.7
 	yum install -y python27-devel python27-pip; \
-	pip install --upgrade pip; \
-	pip install boto3 nose; \
+	pip-2.7 install --upgrade pip; \
+	pip2 install boto3 nose; \
     yum clean all;
