update package script

--- a/gdal2hdf/Dockerfile
+++ b/gdal2hdf/Dockerfile
@@ -58,6 +58,6 @@ RUN \
 	python3 setup.py install; \ 
 	cd /build; rm -rf gdal-$GDAL_VERSION*
 
-COPY gdal2hdf/lambda-package.sh /usr/local/bin/lambda-package.sh
+COPY gdal2hdf/lambda-package-base.sh /usr/local/bin/
 COPY lambda-excluded-packages /usr/local/etc/lambda-excluded-packages
 
