--- a/gdal2hdf/Dockerfile
+++ b/gdal2hdf/Dockerfile
@@ -1,7 +1,5 @@
 FROM developmentseed/geolambda:core
 
-WORKDIR /build
-
 # proj4
 RUN \
     wget https://github.com/OSGeo/proj.4/archive/$PROJ4_VERSION.tar.gz && \
@@ -56,7 +54,7 @@ RUN \
 	make; make install; cd swig/python; \
 	python setup.py install; \
 	python3 setup.py install; \ 
-	cd /build; rm -rf gdal-$GDAL_VERSION*
+	cd $BUILD; rm -rf gdal-$GDAL_VERSION*
 
 COPY gdal2hdf/lambda-package-base.sh /usr/local/bin/
 COPY lambda-excluded-packages /usr/local/etc/lambda-excluded-packages
