--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -18,4 +18,4 @@ ENV \
     LANG=en_US.UTF-8 \
     LC_ALL=en_US.UTF-8
 
-COPY lambda-package-base.sh /usr/local/bin/
+COPY lambda-package.sh /usr/local/bin/
