--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -1,16 +1,5 @@
 FROM developmentseed/geolambda:core
 
-# libhdf4
-RUN \
-	yum install -y bison flex && \
-	wget https://support.hdfgroup.org/ftp/HDF/releases/HDF$HDF4_VERSION/src/hdf-$HDF4_VERSION.tar && \
-	tar -xvf hdf-$HDF4_VERSION.tar && \
-	cd hdf-$HDF4_VERSION && \
-	./configure --prefix=$PREFIX --enable-shared --disable-fortran && \
-	make && make install && cd .. && \
-	rm -rf hdf-$HDF4_VERSION* && \
-    yum remove -y bison flex
-
 # szip
 RUN \
 	wget https://support.hdfgroup.org/ftp/lib-external/szip/$SZIP_VERSION/src/szip-$SZIP_VERSION.tar.gz && \
@@ -20,12 +9,29 @@ RUN \
 	make && make install && cd .. && \
 	rm -rf szip-$SZIP_VERSION*
 
-# libhdf
+# libhdf4
+RUN \
+	yum install -y bison flex && \
+	wget https://support.hdfgroup.org/ftp/HDF/releases/HDF$HDF4_VERSION/src/hdf-$HDF4_VERSION.tar && \
+	tar -xvf hdf-$HDF4_VERSION.tar && \
+	cd hdf-$HDF4_VERSION && \
+	./configure \
+		--prefix=$PREFIX \
+		--with-szlib=$PREFIX \
+		--enable-shared \
+		--disable-fortran; \
+	make && make install && cd .. && \
+	rm -rf hdf-$HDF4_VERSION* && \
+    yum remove -y bison flex
+
+# libhdf5
 RUN \
 	wget https://support.hdfgroup.org/ftp/HDF5/current/src/hdf5-$HDF5_VERSION.tar && \
 	tar -xvf hdf5-$HDF5_VERSION.tar && \
 	cd hdf5-$HDF5_VERSION && \
-	./configure --prefix=$PREFIX --with-szlib=$PREFIX && \
+	./configure \
+		--prefix=$PREFIX \
+		--with-szlib=$PREFIX; \
 	make && make install && cd .. && \
 	rm -rf hdf5-$HDF5_VERSION*
 
