add MIT license

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,11 @@ services:
     entrypoint: /bin/bash
     links:
       - core
+
+#  runner:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile.runner
+#    image: 'developmentseed/geolamnda:runner'
+#    links:
+#      - base
