--- a/geolambda-seed/Dockerfile
+++ b/geolambda-seed/Dockerfile
@@ -1,13 +1,11 @@
 FROM developmentseed/geolambda:full
 
-WORKDIR /build
-
-COPY . /build
-
 # install app
-RUN \
-    pip install -r /build/requirements.txt; \
-    pip install . -v; \
-    rm -rf /build/*;
+#COPY . /build
+#WORKDIR /build
+#RUN \
+#    pip install -r /build/requirements.txt; \
+#    pip install . -v; \
+#    rm -rf /build/*;
 
 WORKDIR /home/geolambda
