--- a/geolambda-seed/docker-compose.yml
+++ b/geolambda-seed/docker-compose.yml
@@ -29,8 +29,10 @@ services:
   testpackage:
     image: 'developmentseed/geolambda:base'
     command: bash -c "nosetests -v -s";
-    working_dir: '/home/geolambda/work'
+    working_dir: /home/geolambda
     env_file: .env
+    environment:
+      - LD_LIBRARY_PATH=/home/geolambda/lambda/lib
     volumes:
       - './test:/home/geolambda/test'
       - './lambda:/home/geolambda/lambda'
