--- a/Dockerfile.cloud
+++ b/Dockerfile.cloud
@@ -4,13 +4,15 @@ RUN \
     yum install -y cmake
 
 # libopenjpeg
+ENV \
+    OPENJPEG_VERSION=2.2.0
 RUN \
-    wget https://github.com/uclouvain/openjpeg/archive/v2.3.0.tar.gz; \
-    tar xvf v2.3.0.tar.gz; \
-    cd openjpeg-2.3.0; mkdir build; cd build; \
+    wget https://github.com/uclouvain/openjpeg/archive/v$OPENJPEG_VERSION.tar.gz; \
+    tar xvf v$OPENJPEG_VERSION.tar.gz; \
+    cd openjpeg-$OPENJPEG_VERSION; mkdir build; cd build; \
     cmake .. -DCMAKE_BUILT_TYPE=Release; \
     make; make install; make clean; 
-    #cd ../..; rm -rf openjpeg-* v2.3.0.tar.gz;
+    #cd ../..; rm -rf openjpeg-* v$OPENJPEG_VERSION.tar.gz;
 
 # GDAL2
 RUN \
