--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -53,7 +53,7 @@ RUN \
         --prefix=$PREFIX \
         --with-hdf4=$PREFIX \
         --with-hdf5=$PREFIX \
-        --with-openjpeg
+        --with-openjpeg \
         --without-python \
         #--with-geos=$PREFIX/bin/geos-config \
         #--with-proj4=$PREFIX \
