--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -55,7 +55,7 @@ RUN \
         --with-hdf5=$PREFIX \
         --with-openjpeg \
         --without-python \
-        #--with-geos=$PREFIX/bin/geos-config \
+        --with-geos=$PREFIX/bin/geos-config \
         #--with-proj4=$PREFIX \
         CFLAGS="-O2 -Os" CXXFLAGS="-O2 -Os"; \
     make; make install; cd swig/python; \
