--- a/Dockerfile.hdf
+++ b/Dockerfile.hdf
@@ -45,7 +45,7 @@ RUN \
         --with-hdf4=$PREFIX \
         --with-hdf5=$PREFIX \
         --without-python \
-        #--with-geos=$PREFIX/bin/geos-config \
+        --with-geos=$PREFIX/bin/geos-config \
         #--with-proj4=$PREFIX \
         CFLAGS="-O2 -Os" CXXFLAGS="-O2 -Os"; \
     make; make install; cd swig/python; \
