--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -7,11 +7,11 @@ RUN \
 	yum -y update; \
     # python 3.6
     yum install -y python36-devel python36-pip; \
-    pip-3.6 install boto3; \
+    pip-3.6 install boto3 pytest; \
     pip-3.6 install --upgrade pip; \
 	# python 2.7
 	yum install -y python27-devel python27-pip; \
-	pip-2.7 install boto3; \
+	pip-2.7 install boto3 pytest; \
     pip-2.7 install --upgrade pip; \
     yum clean all;
 
