consolidate geolambda images in docker-compose and default to latest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,53 +6,16 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.base
-    image: 'developmentseed/geolambda:base'
+    image: 'developmentseed/geolambda-base:latest'
     entrypoint: /bin/bash
 
   core:
     build:
       context: .
-      dockerfile: Dockerfile.core
-    image: 'developmentseed/geolambda:core'
+    image: 'developmentseed/geolambda:latest'
     entrypoint: /bin/bash
     links:
       - base
-
-  min:
-    build:
-      context: .
-      dockerfile: Dockerfile.min
-    image: 'developmentseed/geolambda:min'
-    entrypoint: /bin/bash
-    links:
-      - core
-
-  full:
-    build:
-      context: .
-      dockerfile: Dockerfile.full
-    image: 'developmentseed/geolambda:full'
-    entrypoint: /bin/bash
-    links:
-      - core
-
-  hdf:
-    build:
-      context: .
-      dockerfile: Dockerfile.hdf
-    image: 'developmentseed/geolambda:hdf'
-    entrypoint: /bin/bash
-    links:
-      - core
-
-  cloud:
-    build:
-      context: .
-      dockerfile: Dockerfile.cloud
-    image: 'developmentseed/geolambda:cloud'
-    entrypoint: /bin/bash
-    links:
-      - core
 
 #  runner:
 #    build:
