--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ workflow:
   version: 2
   build_and_deploy:
     jobs:
-      - build_and_deploy
+      - build_and_deploy:
         filters:
           branches:
             only: master
