--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,8 +44,10 @@ jobs:
             ssh-keyscan github.com >> ~/.ssh/known_hosts
             git tag $VERSION
             git push origin $VERSION
-            #docker tag :${CIRCLE_SHA1}"
-            #docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker tag developmentseed/geolambda:latest developmentseed/geolambda:$VERSION
+            docker tag developmentseed/geolambda-base:latest developmentseed/geolambda-base:$VERSION
+            docker push
 
 workflows:
   version: 2
