updated geolambda for Lambda layers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,25 +9,16 @@ services:
     image: 'developmentseed/geolambda-base:latest'
     entrypoint: /bin/bash
 
-  core:
+  geolambda:
     build:
       context: .
-    image: 'developmentseed/geolambda:latest'
+    image: developmentseed/geolambda:latest
     entrypoint: /bin/bash
     links:
       - base
 
-  base:
-    build:
-      context: .
-    image: 'mygeolambda:latest'
-    entrypoint: /bin/bash
-    env_file: .env
-    volumes:
-      - '.:/home/geolambda/work'
-
   test:
-    image: 'mygeolambda:latest'
+    image: developmentseed/geolambda:latest
     entrypoint: bash -c 'pytest test/'
     env_file: .env
     volumes:
@@ -35,21 +26,21 @@ services:
       - './test:/home/geolambda/test'
 
   package27:
-    image: 'mygeolambda:latest'
+    image: developmentseed/geolambda:latest
     command: lambda-package.sh
     working_dir: /home/geolambda/work
     volumes:
       - '.:/home/geolambda/work'
 
-  package36:
-    image: mygeolambda:latest
+  package:
+    image: developmentseed/geolambda:latest
     command: bash -c "lambda-package.sh 3.6"
     working_dir: /home/geolambda/work
     volumes:
       - '.:/home/geolambda/work'
 
   testpackage27:
-    image: 'developmentseed/geolambda-base:latest'
+    image: developmentseed/geolambda-base:latest
     command: bash -c "python -m pytest test/";
     working_dir: /home/geolambda
     env_file: .env
@@ -59,22 +50,14 @@ services:
       - './test:/home/geolambda/test'
       - './lambda:/home/geolambda/lambda'
 
-  testpackage36:
-    image: 'developmentseed/geolambda-base:latest'
+  testpackage:
+    image: developmentseed/geolambda-base:latest
     command: bash -c "python3 -m pytest test/";
     working_dir: /home/geolambda
     env_file: .env
     environment:
+      - PYTHONPATH=/home/geolambda/lambda
       - LD_LIBRARY_PATH=/home/geolambda/lambda/lib
     volumes:
       - './test:/home/geolambda/test'
       - './lambda:/home/geolambda/lambda'
-
-
-#  runner:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile.runner
-#    image: 'developmentseed/geolamnda:runner'
-#    links:
-#      - base
