--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,7 @@ jobs:
           command: |
             VERSION=$(cat VERSION)
             docker build . -t developmentseed/geolambda:${VERSION}
-      - deploy:
-          name: Publish Docker images
-          command: |
-            VERSION=$(cat VERSION)
+            # publish docker images
             mkdir -p ~/.ssh
             ssh-keyscan github.com >> ~/.ssh/known_hosts
             git tag ${VERSION}
@@ -38,11 +35,8 @@ jobs:
             docker tag developmentseed/geolambda:latest developmentseed/geolambda:${VERSION}
             docker push developmentseed/geolambda:latest
             docker push developmentseed/geolambda:${VERSION}
-      - deploy:
-          name: Deploy public Lambda layers
-          command: |
+            # deploy public Lambda layers
             pip install awscli
-            VERSION=$(cat VERSION)
             docker run --rm -v $PWD:/home/geolambda --entrypoint package.sh -it developmentseed/geolambda:${VERSION}
             for region in [us-east-1, us-west-2, eu-central-1]
             do
@@ -54,7 +48,7 @@ jobs:
                 --layer-name geolambda-test --action lambda:GetLayerVersion \
                 --statement-id public --version-number 1 --principal '*'
             done
-                
+
 
 workflows:
   version: 2
