--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,15 +38,18 @@ jobs:
             docker push developmentseed/geolambda:${VERSION}
             # deploy public Lambda layers
             pip install awscli
+            echo ${PWD}
             docker run --rm -v $PWD:/home/geolambda --entrypoint package.sh -it developmentseed/geolambda:${VERSION}
+            echo ${PWD}
             for region in [us-east-1, us-west-2, eu-central-1]
             do
+              echo ${region}
               aws lambda publish-layer-version --region ${region} \
-                --layer-name geolambda-test --license-info "MIT" \
+                --layer-name geolambda-dev --license-info "MIT" \
                 --description "Native geospatial libaries for all runtimes" \
                 --zip-file fileb://lambda-deploy.zip
               aws lambda add-layer-version-permission --region ${region} \
-                --layer-name geolambda-test --action lambda:GetLayerVersion \
+                --layer-name geolambda-dev --action lambda:GetLayerVersion \
                 --statement-id public --version-number 1 --principal '*'
             done
 
