--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,12 +38,9 @@ jobs:
             docker push developmentseed/geolambda:${VERSION}
             # deploy public Lambda layers
             pip install awscli
-            echo ${PWD}
             docker run --rm -v $PWD:/home/geolambda --entrypoint package.sh -it developmentseed/geolambda:${VERSION}
-            echo ${PWD}
-            for region in [us-east-1, us-west-2, eu-central-1]
+            for region in us-east-1 us-west-2 eu-central-1
             do
-              echo ${region}
               aws lambda publish-layer-version --region ${region} \
                 --layer-name geolambda-dev --license-info "MIT" \
                 --description "Native geospatial libaries for all runtimes" \
