--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
             docker run --rm -v $PWD:/home/geolambda --entrypoint package.sh -it developmentseed/geolambda:${VERSION}
             for region in us-east-1 us-west-2 eu-central-1
             do
-              LVERSION='$(aws lambda publish-layer-version --region ${region} \
+              LVERSION="$(aws lambda publish-layer-version --region ${region} \
                 --layer-name geolambda-dev --license-info 'MIT' \
                 --description 'Native geospatial libaries for all runtimes' \
                 --zip-file fileb://lambda-deploy.zip | jq '.Version')"
