ci: switch to deploy on master from now on

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,4 +63,4 @@ workflows:
       - build_and_deploy:
           filters:
             branches:
-              only: develop
+              only: master
